# plumise-agent-app

./: .gitignore  Cargo.toml  README.ko.md  README.md  SIDECAR_MIGRATION.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-cli.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  llama_bin.rs  process.rs  system.rs
crates/core/src/chain/: tx.rs
crates/core/src/inference/: benchmark.rs  mod.rs  proof.rs
crates/core/src/model/: download.rs
crates/core/src/oracle/: mod.rs  reporter.rs
scripts/: setup-dev-sidecar.sh
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md  plumise-agent-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: chat-template.jinja
src-tauri/src/: lib.rs
src-tauri/src/chain/: crypto.rs  mod.rs  precompiles.rs  rewards.rs
src-tauri/src/commands/: agent.rs  config.rs  mod.rs  system.rs
src-tauri/src/inference/: metrics.rs  mod.rs  rpc_server.rs
src-tauri/src/model/: download.rs
src-tauri/src/oracle/: registry.rs  reporter.rs
src-tauri/src/relay/: client.rs
src/components/: UpdateChecker.tsx
src/components/dashboard/: GaugeRing.tsx  ProcessControl.tsx  StatCard.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/hooks/: useAgentProcess.ts  useSystemInfo.ts
src/pages/: Dashboard.tsx  Logs.tsx  Settings.tsx
