[package]
name = "app"
version = "0.1.24"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync", "time", "process", "io-util", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sysinfo = "0.33"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
keyring = "3.6"
regex = "1.11"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
