[package]
name = "plumise-agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plumise-agent"
path = "src/main.rs"

[dependencies]
plumise-agent-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
ctrlc = { version = "3.4", features = ["termination"] }
