[package]
name = "plumise-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "time", "process", "io-util", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
keyring = "3.6"
sysinfo = "0.33"
regex = "1.11"
url = "2"
dirs-next = "2.0"
zip = "2.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
